fix:legible text

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h1 {
 
 body {
     background-color: #141414;
-    color: F5f5f5;
+    color: #f5f5f5;
     font-family: Arial;
 }
 
